fix: green colour in dark mode

--- a/styles/Stylesheet.css
+++ b/styles/Stylesheet.css
@@ -197,5 +197,5 @@ h2, .subtitle-l {
   --font-color: #F6F3F5;
   --accent-color: #888BBF;
   --light-purple: #5A58A6;
-  --green-color: #5A58A6;
+  --green-colour:#5DBB63;
 }
